k8s/tekton-dashboard/base/ingress.yaml
# https://tekton.dev/docs/dashboard/install/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  ingressClassName: public
  tls:
  - hosts:
    - tekton-dashboard.k8s.local
    secretName: tekton-dashboard-tls
  rules:
  - host: tekton-dashboard.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
